# tasks-api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: dep.py  exc.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/tasks/: deps.py  models.py  repo.py  router.py  schemas.py  service.py
app/core/: config.py  database.py
tests/: conftest.py  helpers.py  task_create.py  test_delete.py  test_get.py  test_list.py  test_update.py
